Changed insect blah back to insepct repellant

--- a/explore_california/resources.html
+++ b/explore_california/resources.html
@@ -98,7 +98,7 @@
                 <li>Hat</li>
                 <li>Sunglasses</li>
                 <li>Sunscreen</li>
-                <li>Insect blah</li>
+                <li>Insect repellent</li>
                 <li>Wet/dry bag to protect valuables</li>
                 <li>Comfortable backpack</li>
                 <li>Stainless steel water bottle</li>
